force-app/main/default/objects/Apttus__ComplySystemProperties__c/Apttus__ComplySystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Comply System properties</description>
    <label>Comply System Properties</label>
</CustomObject>