force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AgreementNumberFieldForImportedDocs__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementNumberFieldForImportedDocs__c</fullName>
    <description>The API name of the agreement number field for third party documents</description>
    <inlineHelpText>The API name of the agreement number field for third party documents</inlineHelpText>
    <label>Agreement Number Field For Imported Docs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>