force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AllowPrivateSelectionOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowPrivateSelectionOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the private document selection is allowed to be overridden by the user. Only applicable when private indicator is auto enabled for documents</description>
    <inlineHelpText>Indicates whether the private document selection is allowed to be overridden by the user. Only applicable when private indicator is auto enabled for documents</inlineHelpText>
    <label>Allow Private Selection Override</label>
    <type>Checkbox</type>
</CustomField>