force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AllowReconcileSelectionOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowReconcileSelectionOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the reconcile selection is allowed to be overridden by the user. Only applicable when reconciliation is auto enabled for documents.</description>
    <inlineHelpText>Indicates whether the reconcile selection is allowed to be overridden by the user. Only applicable when reconciliation is auto enabled for documents.</inlineHelpText>
    <label>Allow Reconcile Selection Override</label>
    <type>Checkbox</type>
</CustomField>