force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AllowRegenerateFromXAC__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowRegenerateFromXAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to control the UI button visibility on the XAC for regenerate</description>
    <inlineHelpText>This is a flag to control the UI button visibility on the XAC for regenerate</inlineHelpText>
    <label>Allow Regenerate From XAC</label>
    <type>Checkbox</type>
</CustomField>