force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AncestorSelectionForImportOffline__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AncestorSelectionForImportOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ancestor selection for Import Offline</description>
    <inlineHelpText>Allows a user to link an offline document to an existing major version of a document.</inlineHelpText>
    <label>Ancestor selection for Import Offline</label>
    <type>Checkbox</type>
</CustomField>