force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__ApiUserKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ApiUserKey__c</fullName>
    <description>NO LONGER USED</description>
    <inlineHelpText>NO LONGER USED</inlineHelpText>
    <label>Api User Key (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>