force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AsynchronousCheckinRecipient__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AsynchronousCheckinRecipient__c</fullName>
    <defaultValue>&quot;Both&quot;</defaultValue>
    <description>Asynchronous Checkin Recipient</description>
    <inlineHelpText>Enter a recipient role (Contract Owner, Logged in XAC user or Both) to receive Asynchronous Check-in email notification.</inlineHelpText>
    <label>Asynchronous Checkin Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>