force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AutoEnableAsynchronousCheckin__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AutoEnableAsynchronousCheckin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Enable Asynchronous Checkin</description>
    <inlineHelpText>Default value of the Asynchronous Check-in checkbox available on the X-Author Contracts Check-in pop-up window.</inlineHelpText>
    <label>Auto Enable Asynchronous Checkin</label>
    <type>Checkbox</type>
</CustomField>