force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__AutoEnableReconciliation__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AutoEnableReconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether reconciliation is auto enabled for documents</description>
    <inlineHelpText>Indicates whether reconciliation is auto enabled for documents</inlineHelpText>
    <label>Auto Enable Reconciliation</label>
    <type>Checkbox</type>
</CustomField>