force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__ContractSummaryTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContractSummaryTemplate__c</fullName>
    <description>The name of the contract summary template.</description>
    <inlineHelpText>The name of the contract summary template.</inlineHelpText>
    <label>Contract Summary Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>