force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__DefaultOpportunityAgreementOwner__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultOpportunityAgreementOwner__c</fullName>
    <defaultValue>&quot;Opportunity Owner&quot;</defaultValue>
    <description>The default owner for the agreement created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new agreement</description>
    <inlineHelpText>The default owner for the agreement created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new agreement</inlineHelpText>
    <label>Default Opportunity Agreement Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>