force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__DocumentNamingConvention__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentNamingConvention__c</fullName>
    <description>You may apply your own naming convention to documents at generation, check-in and signature events, by defining a string of delimited variables, in the format %VariableName1%_%VariableName 2% … The default value is &apos;%:Name%_%action%_%templatename%_%timestamp%&apos;.</description>
    <inlineHelpText>You may apply your own naming convention to documents at generation, check-in and signature events, by defining a string of delimited variables, in the format %VarName1%_%VarName 2% … The default value is &apos;%:Name%_%action%_%templatename%_%timestamp%&apos;.</inlineHelpText>
    <label>Document Naming Convention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>