force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__DocumentVersioningNamingConvention__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersioningNamingConvention__c</fullName>
    <description>Optional naming convention to be used for naming versioned documents</description>
    <inlineHelpText>Optional naming convention to be used for naming versioned documents</inlineHelpText>
    <label>Document Versioning Naming Convention (D</label>
    <length>250</length>
    <type>Text</type>
</CustomField>