force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EmailLiteMonitoringReportToApttus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EmailLiteMonitoringReportToApttus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to decide if email the Lite license usage report to the Apttus administrator.</description>
    <inlineHelpText>Emails the Lite license usage report to the Apttus administrator.</inlineHelpText>
    <label>Email Lite Monitoring Report to Apttus?</label>
    <type>Checkbox</type>
</CustomField>