force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EmailTemplateForCheckinNotification__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EmailTemplateForCheckinNotification__c</fullName>
    <description>The email template for sending checkin notifications.</description>
    <inlineHelpText>The email template for sending checkin notifications.</inlineHelpText>
    <label>Email Template For Checkin Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>