force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableClauseApprovals__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableClauseApprovals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether clause approvals are enabled</description>
    <inlineHelpText>Indicates whether clause approvals are enabled</inlineHelpText>
    <label>Enable Clause Approvals</label>
    <type>Checkbox</type>
</CustomField>