force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableDocPermissionsForReview__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableDocPermissionsForReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a user can set field level or clause level permissions for each reviewer.</description>
    <inlineHelpText>Indicates whether a user can set field level or clause level permissions for each reviewer.</inlineHelpText>
    <label>Enable document permissions for review</label>
    <type>Checkbox</type>
</CustomField>