force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableDocumentVersioning__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableDocumentVersioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables document versioning. Make sure EnableVersionControl is set to true.</description>
    <inlineHelpText>Enables document versioning. Make sure EnableVersionControl is set to true.</inlineHelpText>
    <label>Enable Document Versioning</label>
    <type>Checkbox</type>
</CustomField>