force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableMergeCallDebug__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableMergeCallDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the merge service debug is enabled</description>
    <inlineHelpText>Indicates whether the merge service debug is enabled</inlineHelpText>
    <label>Enable Merge Call Debug</label>
    <type>Checkbox</type>
</CustomField>