force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableMultipleCheckout__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableMultipleCheckout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether multiple checkout is allowed. Only applicable when version control is in effect.</description>
    <inlineHelpText>Indicates whether multiple checkout is allowed. Only applicable when version control is in effect.</inlineHelpText>
    <label>Enable Multiple Checkout</label>
    <type>Checkbox</type>
</CustomField>