force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableOnlineContractCollaboration__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableOnlineContractCollaboration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Online Contract Collaboration is enabled</description>
    <inlineHelpText>Indicates whether Online Contract Collaboration is enabled</inlineHelpText>
    <label>Online Contract Collab (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>