force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__EnableTemplateVersioning__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableTemplateVersioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables template versioning</description>
    <inlineHelpText>Enables template versioning</inlineHelpText>
    <label>Enable Template Versioning</label>
    <type>Checkbox</type>
</CustomField>