force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__FilterByThePrimaryAgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FilterByThePrimaryAgreementStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable filtering of agreements (Related/Sibling/Parent/Child) by Status Category or Status of the primary agreement.</description>
    <inlineHelpText>Enable filtering of agreements (Related/Sibling/Parent/Child) by Status Category or Status of the primary agreement.</inlineHelpText>
    <label>Filter By The Primary Agreement Status</label>
    <type>Checkbox</type>
</CustomField>