force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__FooterDatetimeFormatForImportedDocs__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FooterDatetimeFormatForImportedDocs__c</fullName>
    <description>The format of the date time to place in the footer of the imported document</description>
    <inlineHelpText>The format of the date time to place in the footer of the imported document</inlineHelpText>
    <label>Footer Datetime Format For Imported Docs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>