force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__HideContentControlBorder__c.field-meta.xml
<CustomField>
    <fullName>Apttus__HideContentControlBorder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if content control border has to hidden</description>
    <inlineHelpText>Indicates if content control border has to hidden</inlineHelpText>
    <label>Hide Content Control Border</label>
    <type>Checkbox</type>
</CustomField>