force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__InactivateNonCompliantLiteUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InactivateNonCompliantLiteUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Lite user login count exceeded then user access will be controlled through this flag.</description>
    <inlineHelpText>Determines whether to deactivate Lite user who exceeds allowed login limit</inlineHelpText>
    <label>Inactivate Non-Compliant Lite User</label>
    <type>Checkbox</type>
</CustomField>