force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__IntelligentImportForSignedDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IntelligentImportForSignedDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intelligent Import for Signed Document</description>
    <inlineHelpText>Indicates whether to process the signed document using intelligent import</inlineHelpText>
    <label>Intelligent Import for Signed Document</label>
    <type>Checkbox</type>
</CustomField>