force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__LargeDocProcessBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LargeDocProcessBatchSize__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Indicates the number of repeating child items to process in a single batch transaction</description>
    <inlineHelpText>Indicates the number of repeating child items to process in a single batch transaction</inlineHelpText>
    <label>Large Doc Process Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>