force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__LiteLicenceAdminEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LiteLicenceAdminEmail__c</fullName>
    <description>To hold the email address of customer admin to report license violation.</description>
    <inlineHelpText>System admin email address to send CLM Lite License Usage Monitoring Report</inlineHelpText>
    <label>CLM Lite License Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>