force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__OrganizationWideEmailAddressDisplay__c.field-meta.xml
<CustomField>
    <fullName>Apttus__OrganizationWideEmailAddressDisplay__c</fullName>
    <description>Specify the display name to use from the configured organization-wide email addresses</description>
    <inlineHelpText>Specify the display name to use from the configured organization-wide email addresses</inlineHelpText>
    <label>Organization-Wide Email Address Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>