force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__ParallelReview__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ParallelReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Choice to Turn On-Off Parallel Review feature and have a way to make it available for users</description>
    <inlineHelpText>Enable/Disable Parallel Review for document review process</inlineHelpText>
    <label>Parallel Review</label>
    <type>Checkbox</type>
</CustomField>