force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__PDFOwnerPwd__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PDFOwnerPwd__c</fullName>
    <description>The password required to change permissions of the PDF document like printing or editing.</description>
    <inlineHelpText>The password required to change permissions of the PDF document like printing or editing.</inlineHelpText>
    <label>PDF Owner Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>