force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__PublishAuthorEvents__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PublishAuthorEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether author events should be published. If enabled, a record is inserted in the Merge Event table.</description>
    <inlineHelpText>Indicates whether author events should be published. If enabled, a record is inserted in the Merge Event table.</inlineHelpText>
    <label>Publish Author Events</label>
    <type>Checkbox</type>
</CustomField>