force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__RelatedAgreementParallelReview__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RelatedAgreementParallelReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the parallel review is enabled for related agreements.</description>
    <inlineHelpText>Indicates whether the parallel review is enabled for related agreements.</inlineHelpText>
    <label>Parallel Review for related agreements</label>
    <type>Checkbox</type>
</CustomField>