force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__TempEmailTemplateInactiveHours__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TempEmailTemplateInactiveHours__c</fullName>
    <description>Indicates the hours of inactivity after which a temp email template is considered abandoned. The default value is 4 hours</description>
    <inlineHelpText>Indicates the hours of inactivity after which a temp email template is considered abandoned. The default value is 4 hours</inlineHelpText>
    <label>Temp Email Template Inactive Hours</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>