force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__UnlockSmartElements__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UnlockSmartElements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow to delete smart element from the Word document</description>
    <inlineHelpText>Allow to delete smart element from the Word document</inlineHelpText>
    <label>Unlock Smart Elements</label>
    <type>Checkbox</type>
</CustomField>