force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__UseLongQuestionsInWizard__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UseLongQuestionsInWizard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this setting allows you to have more characters available for questions and answers in your wizards</description>
    <inlineHelpText>Enabling this setting allows you to have more characters available for questions and answers in your wizards</inlineHelpText>
    <label>Use text areas for wizards</label>
    <type>Checkbox</type>
</CustomField>