force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus__UseOrganizationWideEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UseOrganizationWideEmailAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox to use an organization-wide email addresses</description>
    <inlineHelpText>Select the checkbox to use an organization-wide email addresses</inlineHelpText>
    <label>Use Organization-Wide Email Address</label>
    <type>Checkbox</type>
</CustomField>