force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__AutoCreateOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__AutoCreateOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an order and assets would be created automatically when the agreement is activated.</description>
    <inlineHelpText>Indicates whether an order and assets would be created automatically when the agreement is activated.</inlineHelpText>
    <label>Auto Create Order</label>
    <type>Checkbox</type>
</CustomField>