force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__AutoSyncWithOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__AutoSyncWithOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the agreement will be automatically synchronized with the opportunity.</description>
    <label>Auto Sync With Opportunity</label>
    <type>Checkbox</type>
</CustomField>