force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__CloneWithApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__CloneWithApprovalStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether approval status should be retained on the cart and line items associated with the cloned quote/proposal</description>
    <inlineHelpText>Indicates whether approval status should be retained on the cart and line items associated with the cloned quote/proposal</inlineHelpText>
    <label>Clone With Approval Status</label>
    <type>Checkbox</type>
</CustomField>