force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__EnableAgreementSummary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__EnableAgreementSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to enable the agreement summary object</description>
    <inlineHelpText>Indicator to enable the agreement summary object</inlineHelpText>
    <label>Enable Agreement Summary</label>
    <type>Checkbox</type>
</CustomField>