force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__SyncBundleUsingLineItems__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__SyncBundleUsingLineItems__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether agreement line items should be used to synchronize bundle products. The default uses agreement summary objects. Only applicable when agreement summary is enabled.</description>
    <inlineHelpText>Indicates whether agreement line items should be used to synchronize bundle products. The default uses agreement summary objects. Only applicable when agreement summary is enabled.</inlineHelpText>
    <label>Sync Bundle Using Line Items</label>
    <type>Checkbox</type>
</CustomField>