force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMConfig__SyncOptionProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__SyncOptionProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the option products should be synchronized along with the bundle. The default is synchronize bundle only.</description>
    <inlineHelpText>Indicates whether the option products should be synchronized along with the bundle. The default is synchronize bundle only.</inlineHelpText>
    <label>Sync Option Products</label>
    <type>Checkbox</type>
</CustomField>