force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__AutoSelectAttachment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__AutoSelectAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the most recent attachment is auto selected</description>
    <inlineHelpText>Indicates whether the most recent attachment is auto selected</inlineHelpText>
    <label>Auto Select Attachment ?</label>
    <type>Checkbox</type>
</CustomField>