force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__ESignatureStrictMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__ESignatureStrictMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RESERVED: Run Docusign eSignature Strict more where this will disable buttons for Select Attachments / Recipeints</description>
    <inlineHelpText>RESERVED: Run Docusign eSignature Strict more where this will disable buttons for Select Attachments / Recipeints</inlineHelpText>
    <label>eSignature Strict Mode</label>
    <type>Checkbox</type>
</CustomField>