force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__FieldNameAutoSelectRecipient__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__FieldNameAutoSelectRecipient__c</fullName>
    <description>The API Name of the field which holds the value for the recipient to auto select</description>
    <inlineHelpText>The API Name of the field which holds the value for the recipient to auto select</inlineHelpText>
    <label>Auto Select Recipient Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>