force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__FilterRSPCByPrimaryAgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__FilterRSPCByPrimaryAgreementStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filter the related/sibling/parent/child agreements by the status category/status values of the primary agreement i.e. agreement being sent for eSignature. This setting is used only when the &quot;Select Attachments From Related/Sibling&quot; setting is checked.</description>
    <inlineHelpText>Filter the related/sibling/parent/child agreements by the status category/status values of the primary agreement i.e. agreement being sent for eSignature. This setting is used only when the &quot;Select Attachments From Related/Sibling&quot; setting is checked.</inlineHelpText>
    <label>Filter RSPC By Primary Agreement Status</label>
    <type>Checkbox</type>
</CustomField>